<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:layout_below="@id/appLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/robotoregular"
        android:textColor="@color/colorWhite"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/robotomedium"
        android:minWidth="150dp"
        android:text="@string/start"
        android:textColor="#fff" />



</RelativeLayout>